# Qwen2API

./: .dockerignore  .gitignore  Dockerfile  README.md  accounts.yml.example  config.yaml.example  model.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: docker-image.yml
app/: main.py
app/api/v1/endpoints/: chat.py  images.py  models.py  videos.py
app/core/: account_manager.py  auth.py  config.py  config_manager.py  cookie_service.py  security.py
app/core/logger/: logger.py  logger_config.py
app/models/: account.py  api.py  chat.py  model.py
app/router/: account.py  chat.py  model.py
app/service/: account_service.py  completion_service.py  message_service.py  model_service.py  task_service.py  upload_service.py
app/services/: __init__.py  account.py  image.py  model.py  request.py  upload.py  video.py
app/utils/: __init__.py  json.py
old/app/: main.py
old/app/api/v1/: api.py
old/app/core/: logger.py  security.py
old/app/models/: api.py
old/app/services/: account.py  media.py  model.py  request.py  upload.py
static/: 404.html  index.html  index.txt
static/_next/static/chunks/: 205-e9916776d75a144a.js  212-ef89a1d425b5c141.js  245-836a16859841a26d.js  385-76a53e116716a735.js  492-32c3c267e02b55a9.js  513-880d3283fb3daaab.js  518-ae5fe8168930f90d.js  587-ddfc51f5a9d66e65.js  610-996bd65a0cbf6dd7.js  633-4697634c55b84236.js  69-e9dd151ce9c720b2.js  95-06814ef9f06ba32c.js  (+3 more)
static/account/login/: index.html  index.txt
static/admin/cookies/: index.html  index.txt
static/admin/list/: index.html  index.txt
(+11 files in other folders)
