[project]
name = "qwen2api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "alibabacloud-oss-v2==1.1.0",
    "email-validator==2.2.0",
    "fastapi==0.110.0",
    "httpx>=0.27.0",
    "loguru>=0.7.2",
    "markupsafe==3.0.2",
    "pipdeptree==2.26.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.7",
    "pyyaml==6.0.1",
    "setuptools==65.5.0",
    "uuid==1.30",
    "uvicorn==0.28.0",
]